[Feat] AI EmotionAnalysis API